--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,63 +1,20 @@
 ﻿<!DOCTYPE html>
 <html lang="pl">
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="keywords" content="restauracja, po, studencku, łódź, tanio, jedzenie, studenci" />
-	<meta name="Description" content="U nas zjesz tanio - zapraszamy!" />
-	<meta name="Author" content="Sebastian Madejski (209388)" />
-	<title>Restauracja "Po Studencku"</title>
-	<link rel="stylesheet" href="style.css" />
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
-	<link href="img/favicon.png" rel="icon" />
-	<script src="js/jquery.min.js" type="text/javascript"></script>
-	<script src="js/common.js" type="text/javascript"></script>
+<head th:replace="fragments/header :: head">
+
 </head>
 <body>
 	<div id="container">
-		<header>
-		<div id="nav">
-			<div class="menu-bar">
-				<a href="index.html"><img class="menu-brand-img" src="img/brand.png" alt="Logo Restauracji Po Studencku" /></a>
-				<ul class="no-menu">
-					<li class="menu-item"><a href="index.html" class="menu-active">Strona Główna</a></li><li class="menu-item"><a href="menu.html">Menu</a></li><li class="menu-item"><a href="o-nas.html">O nas</a></li><li id="menu-trigger" class="menu-hidden"><a id="menu-button" href="#">&equiv;</a></li>
-				</ul>
-				<ul class="resp-menu">
-					<li class="menu-item resp-center up"><a href="index.html" class="menu-active">Strona Główna</a></li><li class="menu-item resp-center"><a href="menu.html">Menu</a></li><li class="menu-item resp-center"><a href="o-nas.html">O nas</a></li>
-				</ul>
-			</div>
-		</div>
+		<header th:replace="fragments/header :: header">
+
 		</header>
 		<div id="content">
 			<h2>Jesteśmy tutaj:</h2>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2469.3691782875885!2d19.480387515279972!3d51.762857799814476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471bcb348cfb308d%3A0xee38f52e8b8d5df7!2zRG9icmEgMTIsIDkwLTAzMCDFgcOzZMW6!5e0!3m2!1sen!2spl!4v1490579047552" width="650" height="350" style="border:0" allowfullscreen></iframe>
 		
 		</div>
-		<footer>
-			<div class="column">
-				<p><strong>Restauracja "Po Studencku"</strong></p>
-				<p>
-				90-040 Łódź<br />
-				ul. Dobra 12/3<br />
-				</p>
-				<p>
-				tel.: 42 631 23 45<br />
-				e-mail: <a href="mailto:po.studencku@gmail.com">po.studencku@gmail.com</a>
-				</p>
-			</div>
-			<div class="column">
-				<p><strong>Godziny otwarcia:</strong></p>
-				<table>
-					<tr><td>pon - czw:</td><td>10 - 17</td></tr>
-					<tr><td>pt - sob:</td><td>11 - 20</td></tr>
-					<tr><td>nd:</td><td>14 - 19</td></tr>
-				</table>
-			</div>
-			<div class="social-logos">
-				<span class="social-logo-img"><a href="#"><img src="img/insta.png" alt="Instagram" /></a></span> <!-- instagram -->
-				<span class="social-logo-img"><a href="#"><img src="img/twitter.png" alt="Twitter" /></a></span> <!-- twitter -->
-				<span class="social-logo-img"><a href="#"><img src="img/fb.png" alt="Facebook" /></a></span> <!-- facebook -->
-			</div>
+		<footer th:replace="fragments/footer :: footer">
+
 		</footer>
 	</div>
 </body>
