add references to StaticAssetController

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,20 +7,20 @@
     <meta name="Description" content="U nas zjesz tanio - zapraszamy!" />
     <meta name="Author" content="Sebastian Madejski (209388)" />
     <title>Restauracja "Po Studencku"</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/staticAsset/c3R5bGUuY3Nz" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
-    <link href="img/favicon.png" rel="icon" />
-    <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/common.js" type="text/javascript"></script>
+    <link href="/staticAsset/aW1nL2Zhdmljb24ucG5n" rel="icon" />
+    <script src="/staticAsset/anMvanF1ZXJ5Lm1pbi5qcw==" type="text/javascript"></script>
+    <script src="/staticAsset/anMvY29tbW9uLmpz" type="text/javascript"></script>
 </head>
 <body>
 <div id="container">
     <header th:fragment="header">
         <div id="nav">
             <div class="menu-bar">
-                <a href="index.html"><img class="menu-brand-img" src="img/brand.png" alt="Logo Restauracji Po Studencku" /></a>
+                <a href="index.html"><img class="menu-brand-img" src="/staticAsset/aW1nL2JyYW5kLmltZw==" alt="Logo Restauracji Po Studencku" /></a>
                 <ul class="no-menu">
-                    <li class="menu-item"><a href="index.html" class="menu-active">Strona Główna</a></li><li class="menu-item"><a href="menu.html">Menu</a></li><li class="menu-item"><a href="o-nas.html">O nas</a></li><li id="menu-trigger" class="menu-hidden"><a id="menu-button" href="#">&equiv;</a></li>
+                    <li class="menu-item"><a href="/" class="menu-active">Strona Główna</a></li><li class="menu-item"><a href="menu.html">Menu</a></li><li class="menu-item"><a href="o-nas.html">O nas</a></li><li id="menu-trigger" class="menu-hidden"><a id="menu-button" href="#">&equiv;</a></li>
                 </ul>
                 <ul class="resp-menu">
                     <li class="menu-item resp-center up"><a href="index.html" class="menu-active">Strona Główna</a></li><li class="menu-item resp-center"><a href="menu.html">Menu</a></li><li class="menu-item resp-center"><a href="o-nas.html">O nas</a></li>
