--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,7 +7,7 @@
     <meta name="Description" content="U nas zjesz tanio - zapraszamy!" />
     <meta name="Author" content="Sebastian Madejski (209388)" />
     <title>Restauracja "Po Studencku"</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/staticAsset/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link href="img/favicon.png" rel="icon" />
     <script src="js/jquery.min.js" type="text/javascript"></script>
@@ -36,9 +36,9 @@
             </table>
         </div>
         <div class="social-logos">
-            <span class="social-logo-img"><a href="#"><img src="img/insta.png" alt="Instagram" /></a></span> <!-- instagram -->
-            <span class="social-logo-img"><a href="#"><img src="img/twitter.png" alt="Twitter" /></a></span> <!-- twitter -->
-            <span class="social-logo-img"><a href="#"><img src="img/fb.png" alt="Facebook" /></a></span> <!-- facebook -->
+            <span class="social-logo-img"><a href="#"><img src="/staticAsset/aW1nL2luc3RhLnBuZw==" alt="Instagram" /></a></span> <!-- instagram -->
+            <span class="social-logo-img"><a href="#"><img src="/staticAsset/aW1nL3R3aXR0ZXIucG5n" alt="Twitter" /></a></span> <!-- twitter -->
+            <span class="social-logo-img"><a href="#"><img src="/staticAsset/aW1nL2ZiLnBuZw==" alt="Facebook" /></a></span> <!-- facebook -->
         </div>
     </footer>
 </div>
