fix paths to assets

--- a/src/main/resources/assets/style.css
+++ b/src/main/resources/assets/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background: url(img/bg.png);
+	background: url(/staticAsset/aW1nL2JnLnBuZw==);
 	font-family: 'Open Sans', sans-serif;
 }
 
