--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,7 +11,7 @@
     <div id="content">
         <h2>Wystąpił błąd:</h2>
         <hr />
-        <strong th:text="${status} + ' ' + ${message}" />
+        <strong th:text="${status} + ' ' + ${error}" />
         <br />
         <strong></strong>
     </div>
