fix URLs for mobile menu

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,7 +23,7 @@
                     <li class="menu-item"><a href="/" class="menu-active">Strona Główna</a></li><li class="menu-item"><a href="/menu">Menu</a></li><li class="menu-item"><a href="/about">O nas</a></li><li id="menu-trigger" class="menu-hidden"><a id="menu-button" href="#">&equiv;</a></li>
                 </ul>
                 <ul class="resp-menu">
-                    <li class="menu-item resp-center up"><a href="index.html" class="menu-active">Strona Główna</a></li><li class="menu-item resp-center"><a href="menu.html">Menu</a></li><li class="menu-item resp-center"><a href="o-nas.html">O nas</a></li>
+                    <li class="menu-item resp-center up"><a href="/" class="menu-active">Strona Główna</a></li><li class="menu-item resp-center"><a href="/menu">Menu</a></li><li class="menu-item resp-center"><a href="/about">O nas</a></li>
                 </ul>
             </div>
         </div>
